--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.application.name=crud_rest
 spring.datasource.url=jdbc:mysql://localhost:3307/employee
 spring.datasource.username=root
 spring.datasource.password=testtest
+
+spring.data.rest.base-path=/api
