--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.username=root
 spring.datasource.password=testtest
 
 spring.data.rest.base-path=/api
+
+#spring.data.rest.default-page-size=3
+spring.data.rest.default-page-size=20
