Add spring security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,7 @@ spring.datasource.password=testtest
 spring.data.rest.base-path=/api
 
 #spring.data.rest.default-page-size=3
-spring.data.rest.default-page-size=20
+#spring.data.rest.default-page-size=20
+
+spring.security.user.name=testuser
+spring.security.user.password=testtest
