Add security config and users

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,5 @@ spring.data.rest.base-path=/api
 #spring.data.rest.default-page-size=3
 #spring.data.rest.default-page-size=20
 
-spring.security.user.name=testuser
-spring.security.user.password=testtest
+spring.security.user.name=test
+spring.security.user.password=test
